--- a/public/act1/owner/index.html
+++ b/public/act1/owner/index.html
@@ -35,26 +35,26 @@ The Neighborhood HOA uses Azure for their IT infrastructure.">
     <meta itemprop="wordCount" content="474">
     <title>Owner :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/owner/index.xml" rel="alternate" type="application/rss+xml" title="Owner :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763892000" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763892000" defer></script>
-    <script src="/js/search-lunr.js?1763892000" defer></script>
-    <script src="/js/search.js?1763892000" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763901482" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763901482" defer></script>
+    <script src="/js/search-lunr.js?1763901482" defer></script>
+    <script src="/js/search.js?1763901482" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763892000";
+      window.relearn.index_js_url="/searchindex.en.js?1763901482";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763892000" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763892000" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763892000" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763892000" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763901482" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763892000" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763892000" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763892000" rel="stylesheet">
-    <link href="/css/theme.css?1763892000" rel="stylesheet">
-    <link href="/css/format-html.css?1763892000" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763901482" rel="stylesheet">
+    <link href="/css/theme.css?1763901482" rel="stylesheet">
+    <link href="/css/format-html.css?1763901482" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -148,7 +148,7 @@ The Neighborhood HOA uses Azure for their IT infrastructure.">
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/act1/spare-key/index.html" title="Spare Key (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/act1/the-open-door/index.html" title="The Open Door (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle interactive"><a href="/act2/index.html" title="Act 2 (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
@@ -174,8 +174,8 @@ The Neighborhood HOA uses Azure for their IT infrastructure.">
 
 <h1 id="owner">Owner</h1>
 
-<p><a href="#R-image-5a836bb632d54434b2aca3ad570cb4e7" class="lightbox-link"><img alt="James Goose" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/goose-steampunk.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-5a836bb632d54434b2aca3ad570cb4e7"><img alt="James Goose" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/goose-steampunk.png"></a></p>
+<p><a href="#R-image-f37426a7c8ca82b5ff8615b1fe0c1b88" class="lightbox-link"><img alt="James Goose" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/goose-steampunk.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f37426a7c8ca82b5ff8615b1fe0c1b88"><img alt="James Goose" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/goose-steampunk.png"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Help Goose James near the park discover the accidentally leaked SAS token in a public JavaScript file and determine what Azure Storage resource it exposes and what permissions it grants.</p>
@@ -189,25 +189,25 @@ The Neighborhood HOA uses Azure for their IT infrastructure.">
 <p>They claim all elevated access uses PIM, but you need to verify there are no permanently assigned Owner roles.</p>
 </blockquote>
 <h2 id="terminal">Terminal</h2>
-<p><a href="#R-image-45a5abcd3066b571b5acfb74fcbc73fd" class="lightbox-link"><img alt="Objective briefing" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-45a5abcd3066b571b5acfb74fcbc73fd"><img alt="Objective briefing" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-1.png"></a></p>
+<p><a href="#R-image-5c5348ae19189dded5501f2ae7359dcc" class="lightbox-link"><img alt="Objective briefing" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-5c5348ae19189dded5501f2ae7359dcc"><img alt="Objective briefing" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-1.png"></a></p>
 <h3 id="query-parameter">Query parameter</h3>
 <p>Prototype command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az account list --query <span style="color:#e6db74">&#34;[].name&#34;</span></span></span></code></pre></div>
-<p><a href="#R-image-ff86df77bca075bf5d9c2ea1c48e4a02" class="lightbox-link"><img alt="List accounts" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ff86df77bca075bf5d9c2ea1c48e4a02"><img alt="List accounts" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-2.png"></a></p>
+<p><a href="#R-image-1a1ad94dbee0cee0a387fbbda2d3d92b" class="lightbox-link"><img alt="List accounts" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1a1ad94dbee0cee0a387fbbda2d3d92b"><img alt="List accounts" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-2.png"></a></p>
 <h3 id="conditional-filtering">Conditional filtering</h3>
 <p>Prototype command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az account list --query <span style="color:#e6db74">&#34;[?state==&#39;Enabled&#39;].{Name:name, ID:id}&#34;</span></span></span></code></pre></div>
-<p><a href="#R-image-27adcd49d847d5d0272b866581d946a1" class="lightbox-link"><img alt="List accounts" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-27adcd49d847d5d0272b866581d946a1"><img alt="List accounts" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-3.png"></a></p>
+<p><a href="#R-image-4b8d9dd3228fd7180969b6d391ce63fb" class="lightbox-link"><img alt="List accounts" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-4b8d9dd3228fd7180969b6d391ce63fb"><img alt="List accounts" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-3.png"></a></p>
 <h3 id="looking-at-owner-of-first-listed-subscription">Looking at owner of first listed subscription</h3>
 <p>Prototype command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az role assignment list --scope <span style="color:#e6db74">&#34;/subscriptions/{ID of first Subscription}&#34;</span> --query <span style="color:#f92672">[</span>?roleDefinition<span style="color:#f92672">==</span><span style="color:#e6db74">&#39;Owner&#39;</span><span style="color:#f92672">]</span></span></span></code></pre></div>
 <p>Updated command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az role assignment list --scope <span style="color:#e6db74">&#34;/subscriptions/2b0942f3-9bca-484b-a508-abdae2db5e64&#34;</span> --query <span style="color:#f92672">[</span>?roleDefinition<span style="color:#f92672">==</span><span style="color:#e6db74">&#39;Owner&#39;</span><span style="color:#f92672">]</span></span></span></code></pre></div>
-<p><a href="#R-image-dc0cd81c5bf259d52a211edb9bbf7c36" class="lightbox-link"><img alt="Owner of the first subscription" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-dc0cd81c5bf259d52a211edb9bbf7c36"><img alt="Owner of the first subscription" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-4.png"></a></p>
+<p><a href="#R-image-1dbe1cd201639d0b6296fec5cee133e4" class="lightbox-link"><img alt="Owner of the first subscription" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1dbe1cd201639d0b6296fec5cee133e4"><img alt="Owner of the first subscription" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-4.png"></a></p>
 <h3 id="looking-at-other-owners-listed-subscriptions">Looking at other owners listed subscriptions</h3>
 <p>Let&rsquo;s run the previous command against the other subscriptions to see what we come up with:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az role assignment list --scope <span style="color:#e6db74">&#34;/subscriptions/4d9dbf2a-90b4-4d40-a97f-dc51f3c3d46e&#34;</span> --query <span style="color:#f92672">[</span>?roleDefinition<span style="color:#f92672">==</span><span style="color:#e6db74">&#39;Owner&#39;</span><span style="color:#f92672">]</span>
@@ -267,14 +267,14 @@ The Neighborhood HOA uses Azure for their IT infrastructure.">
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az ad member list</span></span></code></pre></div>
 <p>Refined command aiming directly at &ldquo;IT Admins&rdquo; as that looked most promising:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az ad member list --group 6b982f2f-78a0-44a8-b915-79240b2b4796 | less</span></span></code></pre></div>
-<p><a href="#R-image-997c69dd3ace3e7fd9abd5c0e5a21739" class="lightbox-link"><img alt="Group information 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-5.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-997c69dd3ace3e7fd9abd5c0e5a21739"><img alt="Group information 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-5.png"></a></p>
+<p><a href="#R-image-14c5b56c46522b3371d8819a0533e057" class="lightbox-link"><img alt="Group information 1" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-5.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-14c5b56c46522b3371d8819a0533e057"><img alt="Group information 1" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-5.png"></a></p>
 <p>Turns out we found a nested group</p>
 <h3 id="nested-groups">Nested groups</h3>
 <p>Rerunning the last command, but with a different id:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az ad member list --group 631ebd3f-39f9-4492-a780-aef2aec8c94e | less</span></span></code></pre></div>
-<p><a href="#R-image-a001bd0b7d0b35af377d378fac529bac" class="lightbox-link"><img alt="Group information 2" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a001bd0b7d0b35af377d378fac529bac"><img alt="Group information 2" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-6.png"></a></p>
+<p><a href="#R-image-2580b5a2394718dac528c4ffdb3aa5a3" class="lightbox-link"><img alt="Group information 2" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-owner-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2580b5a2394718dac528c4ffdb3aa5a3"><img alt="Group information 2" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-owner-6.png"></a></p>
 <p>Full output provided below:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-json" data-lang="json"><span style="display:flex;"><span>[
 </span></span><span style="display:flex;"><span>  {
@@ -356,6 +356,7 @@ The Neighborhood HOA uses Azure for their IT infrastructure.">
             <li class="" data-nav-url="/act1/intro-to-nmap/index.html"><a class="padding" href="/act1/intro-to-nmap/index.html">Intro to Nmap</a></li>
             <li class="" data-nav-url="/act1/blob-storage-challenge-in-the-neighborhood/index.html"><a class="padding" href="/act1/blob-storage-challenge-in-the-neighborhood/index.html">Blob Storage Challenge in the Neighborhood</a></li>
             <li class="" data-nav-url="/act1/spare-key/index.html"><a class="padding" href="/act1/spare-key/index.html">Spare Key</a></li>
+            <li class="" data-nav-url="/act1/the-open-door/index.html"><a class="padding" href="/act1/the-open-door/index.html">The Open Door</a></li>
             <li class="active " data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
@@ -376,8 +377,8 @@ The Neighborhood HOA uses Azure for their IT infrastructure.">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763892000" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763892000" defer></script>
-    <script src="/js/theme.js?1763892000" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763901482" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763901482" defer></script>
+    <script src="/js/theme.js?1763901482" defer></script>
   </body>
 </html>
