--- a/public/act1/spare-key/index.html
+++ b/public/act1/spare-key/index.html
@@ -39,26 +39,26 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
     <meta itemprop="wordCount" content="591">
     <title>Spare Key :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/spare-key/index.xml" rel="alternate" type="application/rss+xml" title="Spare Key :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763892000" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763892000" defer></script>
-    <script src="/js/search-lunr.js?1763892000" defer></script>
-    <script src="/js/search.js?1763892000" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763901482" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763901482" defer></script>
+    <script src="/js/search-lunr.js?1763901482" defer></script>
+    <script src="/js/search.js?1763901482" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763892000";
+      window.relearn.index_js_url="/searchindex.en.js?1763901482";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763892000" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763892000" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763892000" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763892000" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763901482" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763892000" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763892000" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763892000" rel="stylesheet">
-    <link href="/css/theme.css?1763892000" rel="stylesheet">
-    <link href="/css/format-html.css?1763892000" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763901482" rel="stylesheet">
+    <link href="/css/theme.css?1763901482" rel="stylesheet">
+    <link href="/css/format-html.css?1763901482" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -155,7 +155,7 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
 <span class="btn cstyle link noborder notitle interactive"><a href="/act1/blob-storage-challenge-in-the-neighborhood/index.html" title="Blob Storage Challenge in the Neighborhood (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/act1/owner/index.html" title="Owner (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/act1/the-open-door/index.html" title="The Open Door (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle interactive"><button onclick="toggleTopbarFlyout(this)" type="button" title="More"><i class="fa-fw fas fa-ellipsis-v"></i></button></span>
@@ -178,8 +178,8 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
 
 <h1 id="spare-key">Spare Key</h1>
 
-<p><a href="#R-image-f749a6e470f1de00fed53331e6fa879c" class="lightbox-link"><img alt="Barry Goose" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/barry-goose-noir.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f749a6e470f1de00fed53331e6fa879c"><img alt="Barry Goose" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/barry-goose-noir.png"></a></p>
+<p><a href="#R-image-989935f72ffe5517aaf1328afdba0baf" class="lightbox-link"><img alt="Barry Goose" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/barry-goose-noir.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-989935f72ffe5517aaf1328afdba0baf"><img alt="Barry Goose" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/barry-goose-noir.png"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Help Goose Barry near the pond identify which identity has been granted excessive Owner permissions at the subscription level, violating the principle of least privilege.</p>
@@ -192,23 +192,23 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
 <p>Use Azure CLI to find the leak and report exactly where it lives.</p>
 </blockquote>
 <h2 id="spare-key-terminal">Spare Key Terminal</h2>
-<p><a href="#R-image-e105aaf9b52ac593bfe2ba947daebf5c" class="lightbox-link"><img alt="Start" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-e105aaf9b52ac593bfe2ba947daebf5c"><img alt="Start" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-1.png"></a></p>
+<p><a href="#R-image-c31cbbce2e9a6338d4ba4bc3af571b3b" class="lightbox-link"><img alt="Start" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c31cbbce2e9a6338d4ba4bc3af571b3b"><img alt="Start" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-1.png"></a></p>
 <h3 id="listing-all-resource-groups">Listing all resource groups</h3>
 <p>Prototype command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az group list -o table</span></span></code></pre></div>
-<p><a href="#R-image-ca3fd82c13666cfc01956ea523cf2a0e" class="lightbox-link"><img alt="List groups" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-2.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-ca3fd82c13666cfc01956ea523cf2a0e"><img alt="List groups" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-2.png"></a></p>
+<p><a href="#R-image-31b7292b5bc1f80170b086ba82994a35" class="lightbox-link"><img alt="List groups" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-2.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-31b7292b5bc1f80170b086ba82994a35"><img alt="List groups" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-2.png"></a></p>
 <h3 id="finding-storage-accounts">Finding storage accounts</h3>
 <p>Prototype command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage account list --resource-group rg-the-neighborhood -o table</span></span></code></pre></div>
-<p><a href="#R-image-471a5c36d3400935068bbc1f961a7dcc" class="lightbox-link"><img alt="Finding storage accounts" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-3.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-471a5c36d3400935068bbc1f961a7dcc"><img alt="Finding storage accounts" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-3.png"></a></p>
+<p><a href="#R-image-a5518766e4dc6e8d95c975f71848586a" class="lightbox-link"><img alt="Finding storage accounts" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-3.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a5518766e4dc6e8d95c975f71848586a"><img alt="Finding storage accounts" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-3.png"></a></p>
 <h3 id="finding-a-website">Finding a website</h3>
 <p>Prototype command:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage blob service-properties show --account-name &lt;insert_account_name&gt; --auth-mode login</span></span></code></pre></div>
-<p><a href="#R-image-d7e3a7ff02d86ef7dd9a253935d4f333" class="lightbox-link"><img alt="Finding website" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-4.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d7e3a7ff02d86ef7dd9a253935d4f333"><img alt="Finding website" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-4.png"></a></p>
+<p><a href="#R-image-15a515f1af0732d5826999f3e16e59ef" class="lightbox-link"><img alt="Finding website" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-4.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-15a515f1af0732d5826999f3e16e59ef"><img alt="Finding website" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-4.png"></a></p>
 <p>There is a website in storage account <em>neighboorhoodhoa</em></p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>neighbor@d224308072dc:~$ az storage blob service-properties show --account-name neighborhoodhoa --auth-mode login
 </span></span><span style="display:flex;"><span><span style="color:#f92672">{</span>
@@ -221,23 +221,23 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage container list</span></span></code></pre></div>
 <p>This command isn&rsquo;t enough and we have to extend it arguments. Luckily, we can just look at the previous command and add the arguments <code>--account-name</code> and <code>--auth-mode</code> - like so:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage container list --account-name neighborhoodhoa --auth-mode login</span></span></code></pre></div>
-<p><a href="#R-image-d134d243fd3036200fd08f40244b8dc3" class="lightbox-link"><img alt="Finding containers" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-5.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d134d243fd3036200fd08f40244b8dc3"><img alt="Finding containers" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-5.png"></a></p>
+<p><a href="#R-image-8026a672bf85b89716bb4c4acf52f666" class="lightbox-link"><img alt="Finding containers" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-5.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-8026a672bf85b89716bb4c4acf52f666"><img alt="Finding containers" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-5.png"></a></p>
 <h3 id="examining-files-in-static-website-container">Examining files in static website container</h3>
 <p>In this excersice we are not given a prototype command, however we are provided with the following hint:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>when using --container-name you might need <span style="color:#e6db74">&#39;&lt;name&gt;&#39;</span></span></span></code></pre></div>
 <p>However, by applying some forward thinking we can easily whip up a command following the query language logic - like so:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage blob list --container-name <span style="color:#e6db74">&#39;$web&#39;</span> --account-name neighborhoodhoa --auth-mode login</span></span></code></pre></div>
-<p><a href="#R-image-843d37200e911b17caac87376bf6d8a6" class="lightbox-link"><img alt="Examining static website container" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-843d37200e911b17caac87376bf6d8a6"><img alt="Examining static website container" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-6.png"></a></p>
+<p><a href="#R-image-c384d13ed3bde0b5d8e167f61c80ecfd" class="lightbox-link"><img alt="Examining static website container" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c384d13ed3bde0b5d8e167f61c80ecfd"><img alt="Examining static website container" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-6.png"></a></p>
 <h3 id="looking-at-files">Looking at files</h3>
 <p>Yet again we are not presented with a prototype command, but rather with a hint:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>hint: --file /dev/stdout | less will print to your terminal</span></span></code></pre></div>
 <p>By applying the same logic as previous and consulting ChatGPT, I ended up with this command to list a file:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-bash" data-lang="bash"><span style="display:flex;"><span>az storage blob download --container-name <span style="color:#e6db74">&#39;$web&#39;</span> --account-name neighborhoodhoa --auth-modelo
 </span></span><span style="display:flex;"><span>gin --name <span style="color:#e6db74">&#39;iac/terraform.tfvars&#39;</span> --file /dev/stdout | less</span></span></code></pre></div>
-<p><a href="#R-image-02a5c38ab58ce6c98741b036eea2daf4" class="lightbox-link"><img alt="Looking at files" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-6.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-02a5c38ab58ce6c98741b036eea2daf4"><img alt="Looking at files" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-6.png"></a></p>
+<p><a href="#R-image-021a7c90d09cde19de8ae9fff6bb85b2" class="lightbox-link"><img alt="Looking at files" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/act1-spare-key-6.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-021a7c90d09cde19de8ae9fff6bb85b2"><img alt="Looking at files" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/act1-spare-key-6.png"></a></p>
 <p>The content of the file is:</p>
 <div class="highlight wrap-code" dir="auto"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-toml" data-lang="toml"><span style="display:flex;"><span><span style="color:#75715e"># Terraform Variables for HOA Website Deployment</span>
 </span></span><span style="display:flex;"><span><span style="color:#75715e"># Application: Neighborhood HOA Service Request Portal  </span>
@@ -369,6 +369,7 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
             <li class="" data-nav-url="/act1/intro-to-nmap/index.html"><a class="padding" href="/act1/intro-to-nmap/index.html">Intro to Nmap</a></li>
             <li class="" data-nav-url="/act1/blob-storage-challenge-in-the-neighborhood/index.html"><a class="padding" href="/act1/blob-storage-challenge-in-the-neighborhood/index.html">Blob Storage Challenge in the Neighborhood</a></li>
             <li class="active " data-nav-url="/act1/spare-key/index.html"><a class="padding" href="/act1/spare-key/index.html">Spare Key</a></li>
+            <li class="" data-nav-url="/act1/the-open-door/index.html"><a class="padding" href="/act1/the-open-door/index.html">The Open Door</a></li>
             <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
@@ -389,8 +390,8 @@ An admin accidentally uploaded an infrastructure config file that contains a lon
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763892000" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763892000" defer></script>
-    <script src="/js/theme.js?1763892000" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763901482" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763901482" defer></script>
+    <script src="/js/theme.js?1763901482" defer></script>
   </body>
 </html>
