--- a/public/act1/visual-network-thinger/index.html
+++ b/public/act1/visual-network-thinger/index.html
@@ -35,26 +35,26 @@ You know, I think Santa is right! It truly is better to give than to receive.">
     <meta itemprop="wordCount" content="185">
     <title>Visual Network Thinger :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/visual-network-thinger/index.xml" rel="alternate" type="application/rss+xml" title="Visual Network Thinger :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763892000" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763892000" defer></script>
-    <script src="/js/search-lunr.js?1763892000" defer></script>
-    <script src="/js/search.js?1763892000" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763901482" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763901482" defer></script>
+    <script src="/js/search-lunr.js?1763901482" defer></script>
+    <script src="/js/search.js?1763901482" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763892000";
+      window.relearn.index_js_url="/searchindex.en.js?1763901482";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763892000" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763892000" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763892000" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763892000" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763901482" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763901482" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763892000" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763892000" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763892000" rel="stylesheet">
-    <link href="/css/theme.css?1763892000" rel="stylesheet">
-    <link href="/css/format-html.css?1763892000" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763901482" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763901482" rel="stylesheet">
+    <link href="/css/theme.css?1763901482" rel="stylesheet">
+    <link href="/css/format-html.css?1763901482" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -165,8 +165,8 @@ You know, I think Santa is right! It truly is better to give than to receive.">
 
 <h1 id="visual-network-thinger">Visual Network Thinger</h1>
 
-<p><a href="#R-image-f2957e575883cf057709e4d592bd9a19" class="lightbox-link"><img alt="Jared Folkins" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/jaredfolkins-portrait.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-f2957e575883cf057709e4d592bd9a19"><img alt="Jared Folkins" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/jaredfolkins-portrait.png"></a></p>
+<p><a href="#R-image-e01ff01a96057b246920e0518f3afa0b" class="lightbox-link"><img alt="Jared Folkins" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/jaredfolkins-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e01ff01a96057b246920e0518f3afa0b"><img alt="Jared Folkins" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/jaredfolkins-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Skate over to Jared at the frozen pond for some network magic and learn the ropes by the hockey rink.</p>
@@ -181,8 +181,8 @@ You know, I think Santa is right! It truly is better to give than to receive.">
 <p>Want to dive into some hands-on network exploration?</p>
 </blockquote>
 <h2 id="solution">Solution</h2>
-<p><a href="#R-image-19a2d36c9d477bc7e1527791a7d80b38" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-19a2d36c9d477bc7e1527791a7d80b38"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
+<p><a href="#R-image-c7967a2a4dc2bdd505f0d3848a17324c" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c7967a2a4dc2bdd505f0d3848a17324c"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
 <h2 id="jared-folkins-mission-debrief">Jared Folkins mission debrief</h2>
 <blockquote>
 <p>Wonderful! You&rsquo;ve mastered those networking basics beautifully.</p>
@@ -246,6 +246,7 @@ You know, I think Santa is right! It truly is better to give than to receive.">
             <li class="" data-nav-url="/act1/intro-to-nmap/index.html"><a class="padding" href="/act1/intro-to-nmap/index.html">Intro to Nmap</a></li>
             <li class="" data-nav-url="/act1/blob-storage-challenge-in-the-neighborhood/index.html"><a class="padding" href="/act1/blob-storage-challenge-in-the-neighborhood/index.html">Blob Storage Challenge in the Neighborhood</a></li>
             <li class="" data-nav-url="/act1/spare-key/index.html"><a class="padding" href="/act1/spare-key/index.html">Spare Key</a></li>
+            <li class="" data-nav-url="/act1/the-open-door/index.html"><a class="padding" href="/act1/the-open-door/index.html">The Open Door</a></li>
             <li class="" data-nav-url="/act1/owner/index.html"><a class="padding" href="/act1/owner/index.html">Owner</a></li></ul></li>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
@@ -266,8 +267,8 @@ You know, I think Santa is right! It truly is better to give than to receive.">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763892000" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763892000" defer></script>
-    <script src="/js/theme.js?1763892000" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763901482" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763901482" defer></script>
+    <script src="/js/theme.js?1763901482" defer></script>
   </body>
 </html>
